WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233170
[Win][MiniBrowser][WK2] Show a message box for a provisional navigation failure
https://bugs.webkit.org/show_bug.cgi?id=233170
Summary
[Win][MiniBrowser][WK2] Show a message box for a provisional navigation failure
Fujii Hironori
Reported
2021-11-15 22:20:14 PST
[Win][MiniBrowser][WK2] Show a message box for a navigation error 1. Start WinCairo MiniBrowser 2. Go to
https://twitter.com/kmiura/status/1459521026153345033
3. Click the link 4. the page not loaded, but no error message shown
Attachments
Patch
(3.82 KB, patch)
2021-11-15 22:33 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-11-15 22:24:51 PST
The link redirects to <
https://timeway.vivian.jp/kougi-1.html
>. But, the web site has an SSL error. Chrome, Firefox, Safari fallback to http <
http://timeway.vivian.jp/kougi-1.html
>.
Fujii Hironori
Comment 2
2021-11-15 22:33:40 PST
Created
attachment 444347
[details]
Patch
Fujii Hironori
Comment 3
2021-11-15 23:28:36 PST
(In reply to Fujii Hironori from
comment #1
)
> Chrome, Firefox, Safari fallback to http > <
http://timeway.vivian.jp/kougi-1.html
>.
No. This isn't correct. Twitter's short URL <
https://t.co/GivMLMKP7d?amp=1
> sends the http URL for the browsers by checking User-Agent.
Fujii Hironori
Comment 4
2021-11-16 11:50:03 PST
Comment on
attachment 444347
[details]
Patch Clearing flags on attachment: 444347 Committed
r285876
(
244302@main
): <
https://commits.webkit.org/244302@main
>
Fujii Hironori
Comment 5
2021-11-16 11:50:07 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2021-11-16 11:51:26 PST
<
rdar://problem/85468484
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug