[Win][MiniBrowser][WK2] Show a message box for a provisional navigation failure https://bugs.webkit.org/show_bug.cgi?id=233170

Reviewed by Don Olmstead.

Show a MessageBox if a provisional navigation failed.

* MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::WebKitBrowserWindow):
(WebKitBrowserWindow::didFailProvisionalNavigation):
* MiniBrowser/win/WebKitBrowserWindow.h:


Canonical link: https://commits.webkit.org/244302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285876 268f45cc-cd09-0410-ab3c-d52691b4dbfc